--- a/example/example-adapter/example-adapter-brpc/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-brpc/src/main/resources/application.yml
@@ -10,9 +10,8 @@ spring:
   dynamic:
     tp:
       enabled: true
-      enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorTypes: logging       # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
+      collectorTypes: micrometer       # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
       monitorInterval: 5
       platforms:                    # 通知报警平台配置
         - platform: wechat
