--- a/adapter/adapter-dubbo/pom.xml
+++ b/adapter/adapter-dubbo/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-jvmti-runtime</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <optional>true</optional>
