--- a/example/example-adapter/example-adapter-rabbitmq/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-rabbitmq/src/main/resources/application.yml
@@ -18,7 +18,6 @@ spring:
   dynamic:
     tp:
       enabled: true
-      enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
       collectorTypes: internal_logging       # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
       monitorInterval: 5
@@ -30,14 +29,15 @@ spring:
           maximumPoolSize: 16
           #单位秒
           keepAliveTime: 60
-          notifyEnabled: true
-          notifyItems:
-            - type: change
-              enable: true
-            - type: liveness
-              enabled: true
-              threshold: 10
-              interval: 5
-            - type: capacity
-              enable: true
-              threshold: 10
+
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
