--- a/example/example-adapter/example-adapter-rocketmq/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-rocketmq/src/main/resources/application.yml
@@ -32,27 +32,19 @@ spring:
           maximumPoolSize: 200
           keepAliveTime: 60
 
-  # email notify configuration
-  mail:
-    # (optional) email subject, default:ThreadPool Notify
-    title: ThreadPool Notify
-    # mail service address
-    host: smtp.qq.com
-    port: 465
-    # send from
-    username: 123456@qq.com
-    # authorization code eg: rlpadadtcugh4152e
-    password: xxxxxxxxxxxxxxxx
-    default-encoding: UTF-8
-    properties:
-      mail:
-        smtp:
-          socketFactoryClass: javax.net.ssl.SSLSocketFactory
-          ssl:
-            enable: true
-        debug: false
-
 rocketmq:
   name-server: 127.0.0.1:9876
   producer:
     group: test
+
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
