--- a/example/example-apollo/src/main/resources/application.yml
+++ b/example/example-apollo/src/main/resources/application.yml
@@ -7,19 +7,6 @@ spring:
   profiles:
     active: dev
 
-management:
-  endpoints:
-    web:
-      base-path: /actuator
-      exposure:
-        include: '*'
-    httptrace:
-      enabled: false
-    configprops:
-      enabled: false
-    shutdown:
-      enabled: false
-
 apollo:
   bootstrap:
     enabled: true
@@ -29,3 +16,15 @@ apollo:
   meta: http://81.68.181.139:8080
 app:
   id: dynamic-tp-apollo-demo
+
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
