--- a/example/example-etcd/src/main/resources/application.yml
+++ b/example/example-etcd/src/main/resources/application.yml
@@ -12,6 +12,14 @@ spring:
   application:
     name: dynamic-tp-etcd-demo
 
-logging:
-  level:
-    root: INFO
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
