--- a/example/example-huawei-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-huawei-cloud/src/main/resources/bootstrap.yml
@@ -18,3 +18,15 @@ spring:
           customLabelValue: default
         # 自定义配置，使用文本的key/value配置项作为yaml格式配置
         fileSource: application.yaml
+
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
