--- a/example/example-zookeeper/src/main/resources/application.yml
+++ b/example/example-zookeeper/src/main/resources/application.yml
@@ -13,7 +13,14 @@ spring:
         node: dtp-group
         config-key: dynamic-tp-zookeeper-demo-json   # json 用到
 
-
-#logging:
-#  level:
-#    root: DEBUG
+# 开启 SpringBoot Actuator Endpoint 暴露出DynamicTp指标接口
+# 开启 prometheus 指标采集端点
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
