--- a/test/test-core/pom.xml
+++ b/test/test-core/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
