--- a/example/example-nacos/src/main/resources/application.yml
+++ b/example/example-nacos/src/main/resources/application.yml
@@ -3,17 +3,19 @@ server:
 
 spring:
   application:
-    name: dynamic-tp-nacos-demo
+    name: user-data-proxy
   profiles:
     active: dev
 
 nacos:
   config:
-    server-addr: 127.0.0.1:8848
-    type: yaml
-    data-ids: dynamic-tp-nacos-demo-dev.yml,dynamic-tp-nacos-demo-dtp-dev.yml   # 线程池配置文件必须要在此处配置
+    server-addr: ihuman-nacos:8848
+    username: common-user
+    password: cu123456
+    type: YAML
+    data-ids: dynamic-tp-nacos-demo-dev.yml,user-data-proxy-dtp-dev.yml   # 线程池配置文件必须要在此处配置
     auto-refresh: true
-    group: DEFAULT_GROUP
+    group: COMMON-BIZ
     bootstrap:
       enable: true
       log-enable: true
