--- a/example/example-adapter/example-adapter-dubbo/example-adapter-apache-dubbo/pom.xml
+++ b/example/example-adapter/example-adapter-dubbo/example-adapter-apache-dubbo/pom.xml
@@ -16,5 +16,6 @@
         <module>example-adapter-apache-dubbo-2.7.3</module>
         <module>example-adapter-apache-dubbo-2.7.9</module>
         <module>example-adapter-apache-dubbo-3.0.7</module>
+        <module>example-adapter-apache-dubbo-3.2.10</module>
     </modules>
 </project>
