--- a/test/test-core/src/test/resources/dynamic-tp-demo.yml
+++ b/test/test-core/src/test/resources/dynamic-tp-demo.yml
@@ -5,11 +5,11 @@ spring:
       enabled: true
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorTypes: micrometer,logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
+      collectorTypes: jmx,micrometer,logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
       logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs
       monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
       configType: yml               # 配置文件类型
-      executors:                                   # 动态线程池配置，都有默认值，采用默认值的可以不配置该项，减少配置量
+      executors: # 动态线程池配置，都有默认值，采用默认值的可以不配置该项，减少配置量
         - threadPoolName: testRunTimeoutDtpExecutor
           executorType: common                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 1
@@ -25,7 +25,7 @@ spring:
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
           runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
           queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
+          taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
         - threadPoolName: testQueueTimeoutDtpExecutor
           executorType: common                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 1
@@ -41,7 +41,7 @@ spring:
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
           runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
           queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
+          taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
         - threadPoolName: testRejectedQueueTimeoutCancelDtpExecutor
           executorType: common                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 1
@@ -57,7 +57,7 @@ spring:
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
           runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
           queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
+          taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
         - threadPoolName: eagerDtpThreadPoolExecutor
           executorType: eager                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 1
@@ -73,7 +73,7 @@ spring:
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
           runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
           queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
+          taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
         - threadPoolName: priorityDtpThreadPoolExecutor
           executorType: priority                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 1
@@ -88,4 +88,4 @@ spring:
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
           runTimeout: 10000                                # 任务执行超时阈值，目前只做告警用，单位（ms）
           queueTimeout: 10000                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
-          taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
+          taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
