--- a/test/test-common/pom.xml
+++ b/test/test-common/pom.xml
@@ -54,5 +54,9 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-extension-notify-yunzhijia</artifactId>
+        </dependency>
     </dependencies>
 </project>
