解决agent包装runnable任务，导致一些map内存泄露问题，以及相应的告警信息

--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -428,6 +428,12 @@
 
             <dependency>
                 <groupId>org.dromara.dynamictp</groupId>
+                <artifactId>dynamic-tp-extension-agent</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dromara.dynamictp</groupId>
                 <artifactId>dynamic-tp-extension-notify-email</artifactId>
                 <version>${revision}</version>
             </dependency>
