--- a/test/test-extension/pom.xml
+++ b/test/test-extension/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-all</artifactId>
-        <version>1.1.7</version>
+        <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
