--- a/test/pom.xml
+++ b/test/pom.xml
@@ -17,6 +17,7 @@
         <module>test-core</module>
         <module>test-logging</module>
         <module>test-configcenter</module>
+        <module>test-extension</module>
     </modules>
 
     <properties>
