--- a/.github/workflows/build-jvmti.yml
+++ b/.github/workflows/build-jvmti.yml
@@ -22,6 +22,34 @@ jobs:
           path: jvmti/jvmti-build/target/classes/lib*
           if-no-files-found: error
 
+  linux-aarch64:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 8
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ubuntu20.04
+        run: apt update && apt install openjdk-8-jdk g++ -y
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+      - name: Build with Maven
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ubuntu20.04
+          run: |
+            cd ${{ github.workspace }}/jvmti/jvmti-build
+            mvn package
+      - uses: actions/upload-artifact@v3
+        with:
+          name: lib
+          path: jvmti/jvmti-build/target/classes/lib*
+          if-no-files-found: error
+
   mac:
     runs-on: macos-latest
     steps:
