--- a/adapter/adapter-okhttp3/pom.xml
+++ b/adapter/adapter-okhttp3/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>okhttp</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+            <version>1.1.8-beta</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
