refactor：基本完成spring模块化

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -60,5 +60,9 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
     </dependencies>
 </project>
