--- a/core/pom.xml
+++ b/core/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>governator</artifactId>
             <version>1.17.12</version>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
