--- a/test/pom.xml
+++ b/test/pom.xml
@@ -34,6 +34,13 @@
 
         <dependency>
             <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+            <version>1.1.8-beta</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-logging</artifactId>
         </dependency>
 
