添加全局配置，减少配置 #443

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -60,5 +60,12 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.29</version>
+        </dependency>
+
     </dependencies>
 </project>
