--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -30,5 +30,10 @@
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+        </dependency>
     </dependencies>
 </project>
