利用反射优化代码及其他处理 #443

--- a/test/test-core/src/test/resources/demo-dtp-dev-demo.yml
+++ b/test/test-core/src/test/resources/demo-dtp-dev-demo.yml
@@ -45,7 +45,7 @@ spring:
           corePoolSize: 200
           maximumPoolSize: 400
           keepAliveTime: 60
-      executorsGlobal:
+      globalExecutorProps:
         corePoolSize: 6
         maximumPoolSize: 8
         queueCapacity: 200
