重构报警规则，增加count，op字段 #442

--- a/test/test-core/src/test/resources/demo-dtp-dev.yml
+++ b/test/test-core/src/test/resources/demo-dtp-dev.yml
@@ -6,7 +6,7 @@ spring:
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
       collectorTypes: micrometer,logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
-      logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs
+      logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs-
       monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
       platforms:                    # 通知报警平台配置
         - platform: wechat
@@ -70,6 +70,8 @@ spring:
               threshold: 80                # 报警阈值
               platforms: [ding,wechat]     # 可选配置，不配置默认拿上层platforms配置的所以平台
               interval: 120                # 报警间隔（单位：s）
+              countToTrigger: 3
+              op: >
             - type: change
               enabled: true
             - type: liveness
