--- a/test/test-core/src/test/resources/demo-dtp-dev.yml
+++ b/test/test-core/src/test/resources/demo-dtp-dev.yml
@@ -61,8 +61,12 @@ spring:
           waitForTasksToCompleteOnShutdown: false        # 参考spring线程池设计，优雅关闭线程池
           awaitTerminationSeconds: 5                     # 单位（s）
           preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
-          runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
-          queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
+
+#          runTimeout: 200                                # 任务执行超时阈值，目前只做告警用，单位（ms）
+#          queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
+#          runTimeout, queueTimeout通过threshold来统一配置
+          threshold: 100
+
           taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
           notifyItems:                     # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警、拒绝报警、任务超时报警）
             - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
