--- a/.github/workflows/build-jvmti.yml
+++ b/.github/workflows/build-jvmti.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '8'
-          distribution: 'temurin'
+          distribution: 'adopt'
       - name: Build with Maven
         run: |
           cd ${{ github.workspace }}/jvmti/jvmti-build
