add test case for reset tp props with global config

--- a/test/test-core/src/test/resources/demo-dtp-dev.yml
+++ b/test/test-core/src/test/resources/demo-dtp-dev.yml
@@ -45,8 +45,41 @@ spring:
           corePoolSize: 200
           maximumPoolSize: 400
           keepAliveTime: 60
+        - threadPoolName: group2#topic2
+          maximumPoolSize: 200
+          keepAliveTime: 60
+          notifyItems:                     # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警、拒绝报警、任务超时报警）
+            - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
+              enabled: true
+              threshold: 82                # 报警阈值
+              platforms: [ ding,wechat ]     # 可选配置，不配置默认拿上层platforms配置的所以平台
+              interval: 120                # 报警间隔（单位：s）
+
       globalExecutorProps:
-        executorType: eager
+        corePoolSize: 1
+        waitForTasksToCompleteOnShutdown: false        # 参考spring线程池设计，优雅关闭线程池
+        awaitTerminationSeconds: 5                     # 单位（s）
+        preStartAllCoreThreads: false                  # 是否预热所有核心线程，默认false
+        runTimeout: 201                               # 任务执行超时阈值，目前只做告警用，单位（ms）
+        queueTimeout: 101                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
+        taskWrapperNames: [ "ttl" ]                          # 任务包装器名称，集成TaskWrapper接口
+        notifyItems: # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警、拒绝报警、任务超时报警）
+          - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
+            enabled: true
+            threshold: 81                # 报警阈值
+            platforms: [ ding,wechat ]     # 可选配置，不配置默认拿上层platforms配置的所以平台
+            interval: 120                # 报警间隔（单位：s）
+          - type: change
+            enabled: true
+          - type: liveness
+            enabled: true
+            threshold: 80
+          - type: reject
+            enabled: true
+            threshold: 1
+          - type: queue_timeout
+            enabled: true
+            threshold: 1
       executors:                                   # 动态线程池配置，都有默认值，采用默认值的可以不配置该项，减少配置量
         - threadPoolName: dtpExecutor1
           executorType: common                     # 线程池类型common、eager：适用于io密集型
@@ -70,8 +103,6 @@ spring:
               threshold: 80                # 报警阈值
               platforms: [ding,wechat]     # 可选配置，不配置默认拿上层platforms配置的所以平台
               interval: 120                # 报警间隔（单位：s）
-              countToTrigger: 3
-              op: >
             - type: change
               enabled: true
             - type: liveness
@@ -87,3 +118,4 @@ spring:
               enabled: true
               threshold: 1
         - threadPoolName: dtpExecutor2
+          maximumPoolSize: 18
